# MarkPredictor

./: app.py  requirements.txt
data/: processed_exam_data.csv  processing.py
data/exam-score-predictor/: README.md  pyproject.toml
data/exam-score-predictor/src/: main.py
data/exam-score-predictor/src/data/: processing.py
models/: exam_score_model.pkl  model_features.pkl  predict_exam_score.py  train_model.py
static/css/: style.css
static/js/: script.js  summary.js
templates/: grade-potential.html  habits.html  index.html  score-summary.html  tips-feedback.html
